# opencv_webcamc

./: CMakeLists.txt  README.md  main.cpp
